Fixed <ul> spacing

--- a/gallery/_admin/gallery.css
+++ b/gallery/_admin/gallery.css
@@ -15,7 +15,7 @@ body {
 
 ul.allimages {
     list-style: none;
-    margin: 5px;
+    margin: 5px 0;
     padding: 0;
 }
 
